
- Added Gettext catalog lexer.

- Greatly improved the Haskell and OCaml lexers.

- The C# and Java lexers exhibited abysmal performance with some
  input code; this should now be fixed.

- Improved the Bash lexer.

- Added a Vim 7-like style.

- Fixed bugs in the D and MiniD lexer.

- Added a MOOCode lexer.

- The IRC logs lexer is now able to colorize weechat logs too.


Version 0.8.1
-------------
(released Jun 27, 2007)

- Fixed POD highlighting in the Ruby lexer.

- Fixed Unicode class and namespace name highlighting in the C# lexer.

- Fixed Unicode string prefix highlighting in the Python lexer.

- Fixed a bug in the D and MiniD lexers.

- Fixed the included MoinMoin parser.


Version 0.8
-----------
(codename Maikäfer, released May 30, 2007)

- Lexers added:

  * Haskell, thanks to Adam Blinkinsop
  * Redcode, thanks to Adam Blinkinsop
  * D, thanks to Kirk McDonald
  * MuPad, thanks to Christopher Creutzig
  * MiniD, thanks to Jarrett Billingsley
  * Vim Script, by Tim Hatch

- The HTML formatter now has a second line-numbers mode in which it will
  just integrate the numbers in the same ``<pre>`` tag as the code.

- The `CSharpLexer` now is Unicode-aware, which means that it has an
  option that can be set so that it correctly lexes Unicode identifiers
  allowed by the C# specs.

- Added a `RaiseOnErrorTokenFilter` that raises an exception when the
  lexer generates an error token, and a `VisibleWhitespaceFilter` that
  converts whitespace (spaces, tabs, newlines) into visible characters.

- Fixed the `do_insertions()` helper function to yield correct indices.

- The ReST lexer now automatically highlights source code blocks in
  ".. sourcecode:: language" and ".. code:: language" directive blocks.

- Improved the default style (thanks to Tiberius Teng). The old default
  is still available as the "emacs" style (which was an alias before).

- The `get_style_defs` method of HTML formatters now uses the `cssclass`